--- a/src/shared/Menu/menu.css
+++ b/src/shared/Menu/menu.css
@@ -10,6 +10,8 @@
 .nav>li>a>a {
     color:black;
     text-decoration: none;
+    font-size:1rem;
+    text-transform: uppercase;
 }
 
 .nav-menu-mobile-col {
